--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
  &ndash; My Store</title>
 
     <meta name="google-site-verification" content="5pZDXmdCVcHIwBFWwaAasDXlwRKZOs8qVoc6gccUKPw" />
-      <meta name="description" content="OLX188 telah menyediakan link situs slot gacor terpercaya hari ini yang memberikan game slot gacor maxwin maupun slot gacor gampang menang untuk para pecinta slot online di indonesia di tahun 2024! Mainkan game slot online gacor terbaru dan terbaik dan rasakan sensasi jackpot maxwin nya setiap hari!">
+      <meta name="description" content="OLXTOTO telah menyediakan link situs slot gacor terpercaya hari ini yang memberikan game slot gacor maxwin maupun slot gacor gampang menang untuk para pecinta slot online di indonesia di tahun 2024! Mainkan game slot online gacor terbaru dan terbaik dan rasakan sensasi jackpot maxwin nya setiap hari!">
     <link rel="amphtml" href=https://suneo.site/amp/irwin />
 
     
@@ -21,13 +21,13 @@
 <meta property="og:url" content="https://ryangian.com/">
 <meta property="og:title" content="OLXTOTO : LINK ALTERNATIF DAFTAR SITUS SLOT GACOR TERBAIK DAN TERPERCA">
 <meta property="og:type" content="product">
-<meta property="og:description" content="OLX188 telah menyediakan link situs slot gacor terpercaya hari ini yang memberikan game slot gacor maxwin maupun slot gacor gampang menang untuk para pecinta slot online di indonesia di tahun 2024! Mainkan game slot online gacor terbaru dan terbaik dan rasakan sensasi jackpot maxwin nya setiap hari!"><meta property="og:image" content="http://b33896-ee.myshopify.com/cdn/shop/files/olx2.png?v=1714813682">
+<meta property="og:description" content="OLXTOTO telah menyediakan link situs slot gacor terpercaya hari ini yang memberikan game slot gacor maxwin maupun slot gacor gampang menang untuk para pecinta slot online di indonesia di tahun 2024! Mainkan game slot online gacor terbaru dan terbaik dan rasakan sensasi jackpot maxwin nya setiap hari!"><meta property="og:image" content="http://b33896-ee.myshopify.com/cdn/shop/files/olx2.png?v=1714813682">
   <meta property="og:image:secure_url" content="https://b33896-ee.myshopify.com/cdn/shop/files/olx2.png?v=1714813682">
   <meta property="og:image:width" content="1080">
   <meta property="og:image:height" content="1080"><meta property="og:price:amount" content="25.000,00">
   <meta property="og:price:currency" content="IDR"><meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="OLXTOTO : LINK ALTERNATIF DAFTAR SITUS SLOT GACOR TERBAIK DAN TERPERCA">
-<meta name="twitter:description" content="OLX188 telah menyediakan link situs slot gacor terpercaya hari ini yang memberikan game slot gacor maxwin maupun slot gacor gampang menang untuk para pecinta slot online di indonesia di tahun 2024! Mainkan game slot online gacor terbaru dan terbaik dan rasakan sensasi jackpot maxwin nya setiap hari!">
+<meta name="twitter:description" content="OLXTOTO telah menyediakan link situs slot gacor terpercaya hari ini yang memberikan game slot gacor maxwin maupun slot gacor gampang menang untuk para pecinta slot online di indonesia di tahun 2024! Mainkan game slot online gacor terbaru dan terbaik dan rasakan sensasi jackpot maxwin nya setiap hari!">
 
 
     <script src="//b33896-ee.myshopify.com/cdn/shop/t/1/assets/constants.js?v=58251544750838685771714810739" defer="defer"></script>
@@ -1281,7 +1281,7 @@ Item added to your cart
 
 <div class="product__description rte quick-add-hidden" >
                     <p><a title="OLXTOTO LINK ALTERNATIF DAFTAR SITUS SLOT GACOR TERUPDATE" href="https://t.ly/olxtotovip" data-mce-href="https://t.ly/olxtotovip"><img alt="" src="https://cdn.shopify.com/s/files/1/0877/7046/4547/files/daftar-sekarang-gif_1.gif?v=1714814194"></a><a href="https://t.ly/olxtotovip" data-mce-href="https://t.ly/olxtotovip"></a></p>
-<p><span><em><strong>OLX188 </strong></em>telah menyediakan link situs slot gacor terpercaya hari ini yang memberikan game slot gacor maxwin maupun slot gacor gampang menang untuk para pecinta slot online di indonesia di tahun 2024! Mainkan game slot online gacor terbaru dan terbaik dan rasakan sensasi jackpot maxwin nya setiap hari!</span></p>
+<p><span><em><strong>OLXTOTO </strong></em>telah menyediakan link situs slot gacor terpercaya hari ini yang memberikan game slot gacor maxwin maupun slot gacor gampang menang untuk para pecinta slot online di indonesia di tahun 2024! Mainkan game slot online gacor terbaru dan terbaik dan rasakan sensasi jackpot maxwin nya setiap hari!</span></p>
                   </div><a href="/products/olxtoto-link-daftar-dan-login-situs-slot-online-berlisensi-resmin-indonesia" class="link product__view-details animate-arrow">
             View full details
             <svg
@@ -1361,7 +1361,7 @@ Item added to your cart
         "image": [
             "https:\/\/b33896-ee.myshopify.com\/cdn\/shop\/files\/olx2.png?v=1714813682\u0026width=1920"
           ],
-        "description": "\nOLX188 telah menyediakan link situs slot gacor terpercaya hari ini yang memberikan game slot gacor maxwin maupun slot gacor gampang menang untuk para pecinta slot online di indonesia di tahun 2024! Mainkan game slot online gacor terbaru dan terbaik dan rasakan sensasi jackpot maxwin nya setiap hari!",
+        "description": "\nOLXTOTO telah menyediakan link situs slot gacor terpercaya hari ini yang memberikan game slot gacor maxwin maupun slot gacor gampang menang untuk para pecinta slot online di indonesia di tahun 2024! Mainkan game slot online gacor terbaru dan terbaik dan rasakan sensasi jackpot maxwin nya setiap hari!",
         
         "brand": {
           "@type": "Brand",
